# crypto-curve-cpp

./: .gitmodules  CMakeLists.txt  Protocol-Buffers-Installation.md  README.md
cmake/: CryptoCurveConfig.cmake.in
doc/: mcl-Installation.md
examples/: CMakeLists.txt  curve-point-test.cpp
src/: CMakeLists.txt
src/crypto-curve/: bls12381.cpp  bls12381.h  curve.cpp  curve.h  curve_point.cpp  curve_point.h  curve_point.pb.cc  curve_point.pb.h  ecdsa.cpp  ecdsa.h  ed25519_ex.c  ed25519_ex.h  eddsa.cpp  eddsa.h  mcl_wrapper.cpp  mcl_wrapper.h  openssl_curve_wrapper.cpp  openssl_curve_wrapper.h
test/: CMakeLists.txt  arithmetic-operation-test.cpp  comparison-test.cpp  constructor-test.cpp  curve-point-test.cpp  ecdsa-test.cpp  encode-bytes-test.cpp  infinity-element-test.cpp  serialization-base64-test.cpp  serialization-json-test.cpp
